# solana-program-library

./: .eslintrc.js  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mergify.yml  .prettierignore  .prettierrc  .travis.txt  .travis.yml  Anchor.toml  Cargo.toml  Deuces9erz-pnpm-lock.yaml  ETH Solana  GSqds6KYQf5tXEHwrDszu6AqkVXinFCKDwUfTLzp1jEH.json  LICENSE  MoneyCat  README.md  SECURITY.md  SYND  Sqds1ufWkcv5z7K4RPXnrVTNq6Yw3zhEuajPkfhLpek.json  addresses.md  bpf-sdk-install.sh  bump-crate.sh  byearthinc  cargo  cargo-nightly.sh  cbindgen.sh  coverage.sh  deploy.sh  deploy_token_lending.sh  do.sh  index.html  package-lock.json  package.json  patch.crates-io.sh  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  turbo.json  (+2 more)
associated-token-account/client/: Cargo.toml
associated-token-account/client/src/: address.rs  instruction.rs  lib.rs
associated-token-account/program/: Cargo.toml  build.rs  program-id.md  run-tests.sh
associated-token-account/program-test/: Cargo.toml
associated-token-account/program-test/tests/: create_idempotent.rs  extended_mint.rs  process_create_associated_token_account.rs  program_test.rs  recover_nested.rs  spl_token_create.rs
associated-token-account/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  tools.rs
associated-token-account/program/tests/: close_nested.rs  create_idempotent.rs  create_if_non_existent.rs  extended_mint.rs  functional.rs  legacy_program_create.rs  process_create_associated_token_account.rs  process_mint_to.rs  program_test.rs  recover_nested.rs  spl_token_create.rs
associated-token-address/: Cargo.toml
associated-token-address/src/: lib.rs
auction/cli/: Cargo.toml
auction/cli/src/: main.rs
auction/program/: Cargo.toml  README.md
auction/program/src/: entrypoint.rs  errors.rs  instruction.rs  lib.rs  processor.rs  ringbuf.rs  utils.rs
auction/program/tests/: helpers.rs  lib.rs
binary-option/program/: Cargo.toml  program_id.md
binary-option/program/scripts/: patch.crates-io.sh  update-solana-dependencies.sh
binary-option/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  spl_utils.rs  state.rs  (+2 more)
binary-oracle-pair/program/: Cargo.toml
budget/program/: Cargo.toml  program-id.md
ci/client/: Cargo.toml
crud/program/: Cargo.toml  program-id.md
default-token-account/program/: Cargo.toml  run-tests.sh
examples/rust-cross-program-invocation/: Cargo.toml
farms/farm-client/: Cargo.toml
farms/farm-ctrl/: Cargo.toml  tokens_short.json
farms/farm-rpc/: .gitignore  Cargo.toml  swagger.yaml
farms/farm-sdk/: Cargo.toml  build.rs
farms/fund/: Cargo.toml  README.md
farms/router-main/: Cargo.toml
farms/router-orca/: Cargo.toml
farms/router-raydium/: Cargo.toml
farms/router-saber/: .gitignore  Cargo.toml
farms/vaults/: Cargo.toml
fomo3d/: Cargo.toml  README.md
fomo3d/client/: README.md  jest.config.js  package.json  setup.js
fomo3d/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  state.rs
memo/: Cargo.toml  README.md  program-id.md
memo/js/: .eslintrc  .gitignore  README.md  index.html  jest.config.cjs  modules.html  package-lock.json  package.json  tsconfig.cjs.json
memo/program/: Cargo.toml  program-id.md  run-tests.sh
memo/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
memo/ts/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json
program-ids/: Cargo.toml  README.md
program-ids/src/: lib.rs
token/: .flowconfig  .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  package-lock.json  package.json  program-id.md  rustfmt.toml  twoxtx-setup.sh  twoxtx-test-bpf.sh  twoxtx.patch
token-cli/: Cargo.toml
token-cli/src/: main.rs
token-swap/: .gitignore  Cargo.toml  README.md  build.rs  do.sh
token-swap/inc/: token-swap.h
token-swap/js/: .eslintignore  .eslintrc.js  .flowconfig  .gitignore  .mocharc.json  README.md  cluster-devnet.env  cluster-mainnet-beta.env  module.d.ts  module.flow.js  package-lock.json  package.json  rollup.config.js  tsconfig.browser.json  tsconfig.cjs.json  tsconfig.d.json  tsconfig.esm.json  tsconfig.json  tsconfig.root.json
token-swap/program/: Cargo.toml  build.rs  cbindgen.toml  program-id.md
token-swap/proposals/: DynamicMarketMaking.md  Pausable.md  ProactiveMarketMaking.md  StakePoolStableCurve.md
token-swap/scripts/: deploy-step-swap.sh
token-swap/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
token-swap/utils/: Cargo.toml
token/cli/: Cargo.toml  README.md  build.rs  command  demo.sh
token/client/: Cargo.toml
token/flow-typed/: bs58.js
token/inc/: token.h
token/js/: .babelrc  .eslintignore  .eslintrc  .eslintrc.js  .flowconfig  .gitignore  .mocharc.js  .mocharc.json  .prettierignore  .prettierrc  FAQ.md  README.md  babel-node.config.json  babel.config.json  babel.rollup.config.json  cluster-testnet.env  hierarchy.html  index.html  mocha.html  module.d.ts  module.flow.js  modules.html  package-lock.json  package.json  rollup.config.js  tsconfig.all.json  tsconfig.json  tsconfig.root.json  url.js
token/js-old/: .eslintrc.js  .mocharc.js  babel.rollup.config.json  cluster-testnet.env  module.d.ts
token/local_testing/: initialize_test.sh  signer1.json  signer2.json  signer3.json  test.sh
token/perf-monitor/: Cargo.toml  build.rs
token/permissioned-transfer/: Cargo.toml
token/program/: Cargo.toml  README.md  build.rs  program-id.md
token/program-2022/: Cargo.toml  README.md  program-id.md
token/program-2022-test/: Cargo.toml  README.md  build.rs
token/program-test/: Cargo.toml
token/program-v3/: Cargo.toml  program-id.md
token/program2/: Cargo.toml  build.rs
token/rust/: Cargo.toml
token/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  native_mint.rs  native_token.rs  option.rs  processor.rs  state.rs
token/transfer-hook-example/: Cargo.toml  README.md
token/transfer-hook-interface/: Cargo.toml  README.md
token/ts/: .eslintrc.json  .prettierignore  README.md  package.json  rollup.config.js  tsconfig-cjs.json  tsconfig.json
(+4808 files in other folders)
