[workspace]
members = [
  "associated-token-account/program",
  "binary-option/program",
  "binary-oracle-pair/program",
  "examples/rust/cross-program-invocation",
  "examples/rust/custom-heap",
  "examples/rust/logging",
  "examples/rust/sysvar",
  "examples/rust/transfer-lamports",
  "feature-proposal/program",
  "feature-proposal/cli",
  "governance/addin-mock/program",
  "governance/addin-api",
  "governance/program",
  "governance/test-sdk",
  "governance/tools",
  "governance/chat/program",
  "libraries/math",
  "memo/program",
  "name-service/program",
  "record/program",
  "shared-memory/program",
  "stake-pool/cli",
  "stake-pool/program",
  "stateless-asks/program",
  "token-lending/cli",
  "token-lending/program",
  "token-swap/program",
  "token-swap/program/fuzz",
  "token/cli",
  "token/program",
  "token/program-2022",
  "token/program-2022-test",
  "token/client",
  "utils/cgen",
  "utils/test-client",
  "token-lending/flash_loan_receiver",
]
exclude = [
  "farms/farm-client",
  "farms/farm-ctrl",
  "farms/farm-rpc",
  "farms/farm-sdk",
  "farms/router-main",
  "farms/router-raydium",
  "farms/router-saber",
  "farms/router-orca",
  "farms/vaults",
]

[profile.dev]
split-debuginfo = "unpacked"
[patch.crates-io]
solana-account-decoder = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/account-decoder" }
solana-banks-client = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/banks-client" }
solana-banks-server = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/banks-server" }
solana-bpf-loader-program = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/programs/bpf_loader" }
solana-clap-utils = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/clap-utils" }
solana-cli-config = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/cli-config" }
solana-cli-output = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/cli-output" }
solana-client = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/client" }
solana-core = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/core" }
solana-logger = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/logger" }
solana-notifier = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/notifier" }
solana-remote-wallet = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/remote-wallet" }
solana-program = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/sdk/program" }
solana-program-test = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/program-test" }
solana-runtime = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/runtime" }
solana-sdk = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/sdk" }
solana-stake-program = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/programs/stake" }
solana-transaction-status = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/transaction-status" }
solana-version = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/version" }
solana-vote-program = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/programs/vote" }
solana-zk-token-sdk = { path = "/Users/samkim/Projects/solana-privacy/solana-program-library/token/twoxtx-solana/zk-token-sdk" }
