[profile.dev]
split-debuginfo = "unpacked"

# The curve25519-dalek crate uses the `simd` backend by default in v4 if
# possible, which has very slow performance on some platforms with opt-level 0,
# which is the default for `dev` and `test` builds. This slowdown causes
# certain interactions in the solana-test-validator, such as verifying ZK
# proofs in transactions, to take much more than 400ms, creating problems in
# the test environment. To give better performance in the solana-test-validator
# during tests and dev builds, override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[workspace]
members = [
  "associated-token-account/client",
  "associated-token-account/program",
  "associated-token-account/program-test",
  "binary-option/program",
  "binary-oracle-pair/program",
  "examples/rust/cross-program-invocation",
  "examples/rust/custom-heap",
  "examples/rust/logging",
  "examples/rust/sysvar",
  "examples/rust/transfer-lamports",
  "examples/rust/transfer-tokens",
  "feature-proposal/program",
  "feature-proposal/cli",
  "governance/addin-mock/program",
  "governance/addin-api",
  "governance/program",
  "governance/test-sdk",
  "governance/tools",
  "governance/chat/program",
  "instruction-padding/program",
  "libraries/discriminator",
  "libraries/concurrent-merkle-tree",
  "libraries/math",
  "libraries/math-example",
  "libraries/merkle-tree-reference",
  "libraries/pod",
  "libraries/program-error",
  "libraries/tlv-account-resolution",
  "libraries/type-length-value",
  "libraries/type-length-value-derive-test",
  "name-service/program",
  "managed-token/program",
  "record/program",
  "shared-memory/program",
  "single-pool/cli",
  "single-pool/program",
  "slashing/program",
  "stake-pool/cli",
  "stake-pool/program",
  "stateless-asks/program",
  "token-collection/program",
  "token-group/example",
  "token-group/interface",
  "token-lending/cli",
  "token-lending/program",
  "token-metadata/example",
  "token-metadata/interface",
  "token-swap/program",
  "token-swap/program/fuzz",
  "token-upgrade/cli",
  "token-upgrade/program",
  "token-wrap/program",
  "token/cli",
  "token/program",
  "token/program-2022",
  "token/program-2022-test",
  "token/program-2022-test/transfer-hook-test-programs/downgrade",
  "token/program-2022-test/transfer-hook-test-programs/fail",
  "token/program-2022-test/transfer-hook-test-programs/success",
  "token/program-2022-test/transfer-hook-test-programs/swap",
  "token/program-2022-test/transfer-hook-test-programs/swap-with-fee",
  "token/transfer-hook/cli",
  "token/transfer-hook/example",
  "token/transfer-hook/interface",
  "token/confidential-transfer/ciphertext-arithmetic",
  "token/confidential-transfer/proof-extraction",
  "token/confidential-transfer/proof-generation",
  "token/confidential-transfer/proof-tests",
  "token/confidential-transfer/elgamal-registry",
  "token/client",
  "utils/cgen",
  "utils/test-client",
  "token-lending/flash_loan_receiver",
]

exclude = [
]

resolver = "2"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false
