[package]
name = "spl-associated-token-address"
version = "1.0.0"
description = "Solana Program Library Associated Token Address"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
solana-program = "2.0.0"
spl-program-ids = { path = "../program-ids", version = "1.0.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
