[package]
name = "fomo3d"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
solana-program = "1.7.10"
spl-math = { version="0.1.0", features=["no-entrypoint"] }
spl-token = { version="3.2.0", features=["no-entrypoint"] }
thiserror = "1.0.26"
uint = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
proptest = "1.0.0"
solana-program-test = "1.7.10"
solana-sdk = "1.7.10"
tokio = "1.10.0"
