
# Note: This crate must be built using do.sh

[package]
name = "spl-memo"
version = "1.0.0"
description = "Solana Program Library Memo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
solana-sdk = { version = "1.2.4", default-features = false, features=["program"] }

[lib]
name = "spl_memo"
crate-type = ["cdylib", "lib"]
