[package]
name = "spl-program-id"
version = "1.0.0"
description = "Solana Program Library Program IDs"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"


[dependencies]
solana-program = "2.0.0"
