[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL-Token Command-line Utility"
edition = "2018"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-token-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "1.0.0"

[dependencies]
clap = "2.33.2"
solana-clap-utils = { version = "1.3.0"}
solana-cli-config = { version = "1.3.0" }
solana-client = { version = "1.3.0" }
solana-logger = { version = "1.3.0" }
solana-sdk = { version = "1.3.0" }
spl-token = { package = "spl-token", version = "1.0", path="../token" }

# Workflow for developing against local Solana crates
#
# 0. Uncomment the below patches
# 1. Replace PATH_TO_SOLANA with your local filestem path to the Solana mono-repo
# 2. Run `cargo update`
# 3. Use `cargo` normally
#
[patch.crates-io]
#solana-clap-utils = {path = "PATH_TO_SOLANA/clap-utils" }
#solana-cli-config = {path = "PATH_TO_SOLANA/cli-config" }
#solana-client = { path = "PATH_TO_SOLANA/client"}
#solana-logger = {path = "PATH_TO_SOLANA/logger" }
#solana-sdk = { path = "PATH_TO_SOLANA/sdk" }

[[bin]]
name = "spl-token"
path = "src/main.rs"
