
# Note: This crate must be built using do.sh

[package]
name = "spl-token-swap"
version = "0.1.0"
description = "Solana Program Library Token Swap"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
program = []
default = ["program"]

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
remove_dir_all = "=0.5.0"
solana-sdk = { version = "=1.2.12", default-features = false, features=["program"] }
spl-token = { path = "../token" }
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.7.0"}

[build-dependencies]
cbindgen = "=0.14.2"

[lib]
name = "spl_token_swap"
crate-type = ["cdylib", "lib"]
