
# Note: This crate must be built using do.sh

[package]
name = "spl-token"
version = "1.0.3"
description = "Solana Program Library Token"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
remove_dir_all = "=0.5.0"
solana-sdk = { version = "=1.2.17", default-features = false, optional = true }
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.7.0"}

[build-dependencies]
cbindgen = "=0.14.2"

[lib]
name = "spl_token"
crate-type = ["cdylib", "lib"]
