[package]
name = "spl-associated-token-account-client"
version = "2.0.0"
description = "Solana Program Library Associated Token Account Client"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
solana-instruction = { version = "2.1.0", features = ["std"] }
solana-pubkey = { version = "2.1.0", features = ["curve25519"] }

[dev-dependencies]
solana-program = "2.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
