[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Associated Token Account Program Tests"
edition = "2021"
license = "Apache-2.0"
name = "spl-associated-token-account-test"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[features]
test-sbf = []

[dev-dependencies]
solana-program = "2.0.0"
solana-program-test = "2.0.0"
solana-sdk = "2.0.0"
spl-associated-token-account = { version = "3.0.2", path = "../program", features = ["no-entrypoint"] }
spl-token = { version = "6.0", path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "4.0.0", path = "../../token/program-2022", features = ["no-entrypoint"] }
