[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Associated Token Account Program Tests"
edition = "2021"
license = "Apache-2.0"
name = "spl-associated-token-account-test"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[features]
test-sbf = []

[dev-dependencies]
solana-program = "2.1.0"
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
spl-associated-token-account = { version = "6.0.0", path = "../program", features = ["no-entrypoint"] }
spl-associated-token-account-client = { version = "2.0.0", path = "../client" }
spl-token = { version = "7.0", path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", path = "../../token/program-2022", features = ["no-entrypoint"] }
