[package]
name = "spl-associated-token-account"
version = "2.2.0"
description = "Solana Program Library Associated Token Account"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
assert_matches = "1.5.0"
borsh = "1.1"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "1.17.2"
spl-token = { version = "4.0", path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9", path = "../../token/program-2022", features = ["no-entrypoint"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
