[package]
name = "spl-associated-token-account"
version = "6.0.0"
description = "Solana Program Library Associated Token Account"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.5.3"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "2.1.0"
spl-associated-token-account-client = { version = "2.0.0", path = "../client" }
spl-token = { version = "7.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
spl-token-2022 = { version = "6.0.0", path = "../../token/program-2022", features = [
  "no-entrypoint",
] }
thiserror = "2.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
