[package]
name = "spl-token-vault-test-client"
version = "0.1.0"
description = "Solana Program Library Fraction Test Client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
bincode = "1.3.2"
borsh = "0.8.2"
clap = "2.33.3"
rand = "*"
solana-clap-utils = "1.6"
solana-cli-config = "1.6"
solana-client = "1.6.2"
solana-program = "1.6.2"
solana-sdk = "1.6.2"
spl-auction = { path = "../program", features = [ "no-entrypoint" ] }
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
