[package]
name = "spl-auction"
version = "0.0.1"
description = "Solana Auction Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.8.2"
byteorder = "1.3"
num-derive = "0.3"
num-traits = "0.2"
ringbuf = "0.2.3"
solana-program = "1.6.2"
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.6.2"
solana-sdk = "1.6.2"

[lib]
crate-type = ["cdylib", "lib"]
