[package]
name = "spl-binary-oracle-pair"
version = "0.1.0"
description = "Solana Program Library Binary Oracle Pair"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
solana-program = "2.0.3"
spl-token = { version = "6.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
thiserror = "1.0"
uint = "0.10"
borsh = "1.5.1"

[dev-dependencies]
solana-program-test = "2.0.3"
solana-sdk = "2.0.3"

[lib]
crate-type = ["cdylib", "lib"]
