[package]
name = "spl-budget"
version = "0.1.0"
description = "SPL Budget program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
bincode = "1.3.1"
chrono = { version = "0.4.11", features = ["serde"] }
log = "0.4.8"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.112", features = ["derive"] }
solana-sdk = { version = "1.2.17" }
thiserror = "1.0"

[dev-dependencies]
solana-runtime = { version = "1.2.17" }

[lib]
crate-type = ["lib", "cdylib"]
name = "spl_budget"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
