[package]
name = "spl-budget"
version = "0.1.0"
description = "SPL Budget program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
bincode = "1.3.1"
chrono = { version = "0.4.11", features = ["serde"] }
log = "0.4.8"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.112", features = ["derive"] }
solana-sdk = { version = "1.3.4", default-features = false, optional = true }
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.7.0"}
#solana-runtime = { version = "1.2.17" }

[lib]
crate-type = ["lib", "cdylib"]
name = "spl_budget"
