[package]
name = "test-client"
version = "0.1.0"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
publish = false
edition = "2018"

# Used to ensure that SPL programs are buildable by external clients

[dependencies]
solana-sdk = "1.3.4"
spl-memo = { path = "../../memo/program" }
spl-token = { path = "../../token/program" }
spl-token2 = { path = "../../token/program2" }
spl-token-swap = { path = "../../token-swap/program" }

