[package]
name = "spl-crud"
version = "0.1.0"
description = "Solana Program Library Associated Token Account"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.8.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = { version = "1.6.0", path = "../../../solana/sdk/program" }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = { version = "1.6.0", path = "../../../solana/program-test" }
solana-sdk = { version = "1.6.0", path = "../../../solana/sdk" }
tokio = { version = "1.1", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
