[package]
name = "spl-example-cross-program-invocation"
version = "1.0.0"
description = "Solana Program Library Cross Program Invocation Example"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.4.5"

[dev-dependencies]
solana-program-test = "1.4.5"
solana-sdk = "1.4.5"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
