[package]
name = "solana-farm-client"
version = "1.1.3"
description = "Solana Farm Client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
debug = []

[dependencies]
log = "0.4.16"
arrayvec = "0.7.2"
arrayref = "0.3.6"
serde = "1.0.136"
clap = "2.34.0"
thiserror = "1.0.30"
bs58 = "0.4.0"
solana-sdk = "1.9.18"
solana-client = "1.9.18"
solana-cli-config = "1.9.18"
solana-account-decoder = "1.9.18"
solana-logger = "1.9.18"
solana-version = "1.9.18"
solana-farm-sdk = "1.1.3"
solana-clap-utils = "1.9.18"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.0.3", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", features = ["no-entrypoint"] }
quarry-mine = { version = "5.0.2", features = ["no-entrypoint"] }
stable-swap-client = "1.8.1"
stable-swap-math = "1.8.1"
chrono = "0.4.19"
base64 = "0.13.0"
bincode = "1.3.3"
num_enum = "0.5.7"
pyth-client = "=0.5.0"

[lib]
name = "solana_farm_client"
path = "src/lib.rs"

[[bin]]
name = "solana-farm-client"
path = "src/cli/main.rs"
