[package]
name = "solana-farm-ctrl"
version = "1.1.3"
description = "Solana Farm Control"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
debug = []

[dependencies]
log = "0.4.16"
clap = "2.34.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
solana-client = "1.9.18"
solana-logger = "1.9.18"
solana-version = "1.9.18"
solana-clap-utils = "1.9.18"
solana-sdk = "1.9.18"
solana-farm-sdk = "1.1.3"
solana-farm-client = "1.1.3"
solana-account-decoder = "1.9.18"
spl-associated-token-account = { version = "=1.0.3", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", features = ["no-entrypoint"] }
solana-cli-config = "1.9.18"
quarry-mine = { version = "5.0.2", features = ["no-entrypoint"] }
url = "2.2.2"
num_enum = "0.5.7"
