[package]
name = "solana-farm-rpc"
version = "0.0.1"
description = "Solana Farm RPC"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
debug = []

[dependencies]
log = "0.4.14"
bs58 = "0.4.0"
clap = "2.33.3"
dirs-next = "2.0.0"
lazy_static = "1.4.0"
reqwest = "0.11.6"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
serde_yaml = "0.8.21"
solana-client = "1.10.8"
solana-logger = "1.10.8"
solana-version = "1.10.8"
solana-clap-utils = "1.10.8"
solana-sdk = "1.10.8"
solana-farm-sdk = { path = "../farm-sdk" }
solana-farm-client = { path = "../farm-client" }
solana-account-decoder = "1.10.8"
url = "2.2.2"
