[package]
name = "solana-farm-rpc"
version = "1.1.3"
description = "Solana Farm RPC"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
debug = []

[dependencies]
log = "0.4.16"
bs58 = "0.4.0"
clap = "2.34.0"
dirs-next = "2.0.0"
lazy_static = "1.4.0"
reqwest = "0.11.10"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
solana-client = "1.9.18"
solana-logger = "1.9.18"
solana-version = "1.9.18"
solana-clap-utils = "1.9.18"
solana-sdk = "1.9.18"
solana-farm-sdk = "1.1.3"
solana-farm-client = "1.1.3"
solana-account-decoder = "1.9.18"
solana-cli-config = "1.9.18"
rusqlite = "0.27.0"
url = "2.2.2"

[[bin]]
name = "solana-farm-rpc"
path = "src/rpc/main.rs"

[[bin]]
name = "solana-farm-stats"
path = "src/stats/main.rs"